Project, Order & Item hierachy

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,4 +2,9 @@
 
 <%= link_to "Would you like to import a new order?", new_orderfile_path %>
 <br>
+
+<%= link_to "Would you like to assign a user to a project?", home_assigntouser_path %>
+<br>
+
+
 <%= link_to "logout", destroy_user_session_path, method: :delete %>
